# bottle

./: .coveragerc  .deepsource.toml  .flake8  .gitignore  .readthedocs.yaml  .travis-requirements.txt  .travis.yml  AGENTS.md  AUTHORS  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README  README.md  README.rst  SECURITY.md  bottle.py  bottle.pyi  bottledb.py  chat_code.py  circle.yml  demo.py  docs  example.py  example.tpl  my_code.py  pyproject.toml  run_tests.sh  setup.cfg  setup.py  startbottle.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: install-deps.sh  lint_python.yml  pythonpackage.yml  run_tests.yml
AngularJS_Demo/: main.py
AngularJS_Demo/views/: index.tpl
apidoc/: Makefile  api.rst  changelog.rst  contact.rst  development.rst  download.rst  faq.rst  index.rst  intro.rst  plugindev.rst  plugins.rst  recieps.rst  recipes.rst  stpl.rst  tutorial.rst  tutorial_app.rst
apidoc/plugins/: devguide.rst  index.rst
apidoc/source/: conf.py
apidoc/sphinx/: conf.py
docs/: 2009-12-02_release_notes_0.7.md  2009-12-18_jQuery_Plugin_Selector.md  2009-12-18_selector.md  2009-12-19_Comparing_HelloWorld_Performance.md  Makefile  api.rst  async.rst  blog_test.md  cache_busting.rst  changelog.rst  cli.rst  conf.py  configuration.rst  contact.md  contact.rst  contributors.rst  deployment.rst  development.rst  docs.md  docs_0_7.md  faq.md  faq.rst  index.rst  logos.md  plugindev.rst  python3.md  recipes.rst  release.md  requirements.txt  routing.rst  sessions.md  start.md  stpl.rst  tutorial.md  tutorial.rst  tutorial_app.rst  update.py
docs/.tx/: config
docs/_locale/: Makefile  README.txt  requirements.txt  update.sh
docs/_static/: bottle.css_t
docs/_templates/: donation.html  layout.html  page.html  release-warning.html  sidebar-intro.html
docs/plugins/: dev.rst  index.rst  list.rst  session.rst  sqlite.rst  werkzeug.rst
examples/: howto.py  index.tpl
examples/simple_templates/: example.py  header.tpl
homepage/: app.py  bottle.py
homepage/pages/: docs.md  release.md
homepage/static/: main.css  news.html  pygments.css  robots.txt
homepage/views/: basehtml.tpl  blogposts.tpl  footer.tpl  header.tpl  page.tpl  pagemask.tpl  rss.tpl
plugins/: bottle_otfcompress.py  bottle_profile.py  bottle_sqlite.py  bottle_werkzeug.py  sqlite.py  werkzeug.py
plugins/fbauth/: README  bottle_fbauth.py  setup.py  test.py
plugins/sqlite/: README.rst  bottle_sqlite.py  setup.py  test.py
plugins/werkzeug/: README  README.rst  bottle_werkzeug.py  setup.py  test.py
test/: .coveragerc  __init__.py  build_python.sh  doctest_router.txt  doctest_securecookies.txt  example_settings.py  servertest.py  servertesttop.py  stpl_simple.tpl  stpl_t2main.tpl  test_app.py  test_auth.py  test_cache_busting.py  test_cli.py  test_config.py  test_configdict.py  test_contextlocals.py  test_db.py  test_environ.py  test_exc.py  test_fileupload.py  test_formsdict.py  test_html_helper.py  test_importhook.py  test_jinja2.py  test_mako.py  test_maxage.py  test_mdict.py  test_mount.py  test_multipart.py  test_oorouting.py  test_other.py  test_outputfilter.py  test_plugins.py  test_resources.py  test_route.py  test_router.py  test_routes.py  test_securecookies.py  test_sendfile.py  (+12 more)
test/fixtures/: test.crt  test.key
test/servertestpackage/: relative.py  submodule.py
test/views/: jinja2_base.tpl  jinja2_inherit.tpl  jinja2_simple.tpl  mako_base.tpl  mako_inherit.tpl  mako_simple.tpl  shpaml_include.tpl  shpaml_simple.tpl  shpaml_simple_rebase.tpl  shpaml_t2base.tpl  shpaml_unicode.tpl  stpl_include.tpl  stpl_include_to_global.tpl  (+5 more)
(+192 files in other folders)
